--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -77,6 +77,8 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
 links:
   - title: 百度一下
     url: http://www.baidu.com/
+  - title: 去哪儿？
+    url: http://www.qunar.com/
 
 timeline:
   - num: 1
