--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -65,6 +65,9 @@ menu:
   - page: about
     directory: about/
     icon: fa-user
+  - page: history
+    directory: history/
+    icon: fa-book
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, rencent_comments and links.
   - search
@@ -82,12 +85,8 @@ links:
 
 timeline:
   - num: 1
-    word: 2014/06/12-Start
+    word: 2018/04/14-Start
   - num: 2
-    word: 2014/11/29-XXX
-  - num: 3
-    word: 2015/02/18-DDD
-  - num: 4
     word: More
 
 # Static files
